<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txvNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txvTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone" />

            <TextView
                android:id="@+id/txvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txvSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txvSenha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirme_sua_senha" />

            <EditText
                android:id="@+id/edtContraSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txvSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />

            <RadioGroup
                android:id="@+id/rdgSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rdbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rdbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feminino" />
            </RadioGroup>

            <TextView
                android:id="@+id/txvPais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pa_s" />

            <Spinner
                android:id="@+id/spinnerPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvCIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidade" />

            <Spinner
                android:id="@+id/spinnerCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desejo_receber_atualiza_es_no_meu_e_mail_cadastrado" />

            <Button
                android:id="@+id/btnSeguinte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/seguinte" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>